--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,3 +40,7 @@ install:
   - cmd: cd nordicsemi
   - cmd: pip uninstall -y enum34
   - cmd: pyinstaller __main__.py -F
+  - cmd: mv "dist\\__main__.exe" "dist\\adafruit_nrfutil.exe"
+
+artifacts:
+  - path: "dist\\adafruit_nrfutil.exe"
