rename executable to adafruit-nrfutil (was underscore); set up appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,46 +1,35 @@
 environment:
-  matrix:
-    - PYTHON: "C:\\Python36"
-      PYTHON_VERSION: "3.6.4"
-      PYTHON_ARCH: "32"
+  PYTHON: 'C:\Python36'
 
 platform: x86
 
 configuration: Release
 
 init:
-  - cmd: ver
-  - cmd: ECHO Processor architecture - %PROCESSOR_ARCHITECTURE%
-  - cmd: wmic OS get OSArchitecture
-
-  # As AppVeyor has multiple python installs, check which one it uses by default
-  - cmd: ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%
-  - cmd: python --version
-  - cmd: python -c "import struct; print(struct.calcsize('P') * 8)"
-  - cmd: python -c "import sys; print(sys.executable)"
-
   # Set the relevant Python and pip location to the path
   - cmd: set PATH=%PYTHON%;%PYTHON%\scripts;%PATH%
   - cmd: ECHO Path - %PATH%
 
-  # Verify the new default python
-  - cmd: python --version
-  - cmd: python -c "import struct; print(struct.calcsize('P') * 8)"
-  - cmd: python -c "import sys; print(sys.executable)"
-  - cmd: pip --version
-
-  # Check out installed python packages
-  - cmd: pip freeze
-
 install:
-  # Install Mu Python dependencies
   - cmd: pip install -r requirements.txt
   - cmd: pip install pyinstaller
   - cmd: cd nordicsemi
-  - cmd: pyinstaller __main__.py --onefile --clean --name adafruit_nrfutil
+  - cmd: pyinstaller __main__.py --onefile --clean --name adafruit-nrfutil
 
 # Not a project with an msbuild file, build done at install.
 build: None
 
 artifacts:
-  - path: "nordicsemi\\dist\\adafruit_nrfutil.exe"
+  - path: 'nordicsemi\dist\adafruit-nrfutil.exe'
+
+deploy:
+  provider: GitHub
+  description: >
+    Source release and standalone binaries.
+    If Python and pip are installed, you do not need the files here.
+    Instead, on Linux and MacOS, do `pip3 install --user adafruit-nrfutil`
+    On Windows, do `pip install adafruit-nrfutil`.
+  auth_token:
+    secure: tcFElKgzcRzCgpqiJ78WTYNO1FTx4Z8aHV47OxlZIfVkulDr/o81jQZ2aLjirvO5
+  on:
+    appveyor_repo_tag: true
