--- a/.github/workflows/release-binary.yml
+++ b/.github/workflows/release-binary.yml
@@ -24,7 +24,7 @@ jobs:
         pip3 install -r requirements.txt
         cd nordicsemi
         pyinstaller __main__.py --onefile --clean --name adafruit-nrfutil
-        7z a -tzip ../adafruit-nrfutil--${{ github.event.release.tag_name }}-win.zip dist/adafruit-nrfutil/adafruit-nrfutil.exe
+        7z a -tzip ../adafruit-nrfutil--${{ github.event.release.tag_name }}-win.zip dist/adafruit-nrfutil.exe
 
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
