--- a/.github/workflows/release-binary.yml
+++ b/.github/workflows/release-binary.yml
@@ -24,7 +24,8 @@ jobs:
         pip3 install -r requirements.txt
         cd nordicsemi
         pyinstaller __main__.py --onefile --clean --name adafruit-nrfutil
-        7z a -tzip ../adafruit-nrfutil--${{ github.event.release.tag_name }}-win.zip dist/adafruit-nrfutil.exe
+        cd dist
+        7z a -tzip ../../adafruit-nrfutil--${{ github.event.release.tag_name }}-win.zip adafruit-nrfutil.exe
 
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
@@ -35,4 +36,36 @@ jobs:
         upload_url: ${{ github.event.release.upload_url }}
         asset_path: adafruit-nrfutil--${{ github.event.release.tag_name }}-win.zip
         asset_name: adafruit-nrfutil--${{ github.event.release.tag_name }}-win.zip
+        asset_content_type: application/zip
+
+  macOS:
+    runs-on: macos-latest
+
+    steps:
+    - name: Setup Python
+      uses: actions/setup-python@v1
+      with:
+        python-version: '3.x'
+
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Create binaries
+      run: |
+        pip3 install pyinstaller
+        pip3 install -r requirements.txt
+        cd nordicsemi
+        pyinstaller __main__.py --onefile --clean --name adafruit-nrfutil
+        cd dist
+        7z a -tzip ../../adafruit-nrfutil--${{ github.event.release.tag_name }}-macos.zip adafruit-nrfutil
+
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      if: ${{ github.event_name == 'release' }}
+      with:
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: adafruit-nrfutil--${{ github.event.release.tag_name }}-macos.zip
+        asset_name: adafruit-nrfutil--${{ github.event.release.tag_name }}-macos.zip
         asset_content_type: application/zip
